  Database.getSQLDateString() removed
  Entity.Key single value constructor optimized for integer values
  Entity.Key.setAs() now sets the hashCode value instead of simply setting the hash code dirty flag
  FilteredComboBoxModel now contains the nullValueString, sort comparator guarantees it stays at the top
  ItemComboBoxModel sort comparator keeps null items at the top
  Property.hasDescription() added
  EntityUiUtil now only adds tool tips to components if description is provided
  EntityLookupField adds the lookup properties as default tool tip
  EntityKeyCriteria now always uses original key values
  EntityDataUtil added
  EntityDb.disconnect() added
  EntityDbRemoteAdapter.server field added, used when disconnecting
  Entity.Key overrides clear() to handle hash code caching
  DateFormats.getDateFormat() overloaded with lenient parameter
  Configuration.getDefaultDate/TimestampFormat() returns non-lenient formats
  EntityDataUtil.copyEntities() copyPrimaryKeys parameter added
  MethodLogger.parameterArrayToString() renamed to argumentArrayToString() and implemented, appendArgumentAsString() added for overriding, no longer abstract
  EntityUtil.getPropertyValues() overloaded
  PropertyValueListProvider renamed to PropertyValueProvider, getValueProvider() added
  EntityDbConnection insert improved a bit when it comes to queried/autogen keys
  EntityPanel.updateSelectedEntities(property) and getInputProvider() moved to EntityTablePanel
  EntityEditModel.getValueProvider() added
  EntityUtil.getUpdateProperties() added
  EntityPanel.createStaticEntityPanel() removed
  EntityTabelPanel.createStaticEntityTablePanel() added
  EntityPanel.viewSelectionDependencies() moved to EntityTablePanel
  EntityPanel.exportSelected() moved to EntityTablePanel
  EntityTablePanel.hiddenColumns and associated stuff moved all the way down to AbstractFilteredTableModel/Panel
  ValueChangeMapEditPanel.defaultFocusComponent renamed to initialFocusComponent (along with related methods)