@@ -1624,3 +1624,5 @@
   EntityPanel.exportSelected() moved to EntityTablePanel
   EntityTablePanel.hiddenColumns and associated stuff moved all the way down to AbstractFilteredTableModel/Panel
   ValueChangeMapEditPanel.defaultFocusComponent renamed to initialFocusComponent (along with related methods)
+  PropertyValueProviderTest added
+  common.db.DbUtil added, with createEmbeddedDatabase()
